OO-5158: choose the right form if the user is an invitee